--- a/Game.html
+++ b/Game.html
@@ -13,6 +13,7 @@
     <script src="easeljs-NEXT.combined.js"></script>
 
     <!-- Game script below -->
+    <script type="text/javascript" src="Audio.js"></script>
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Player.js"></script>
     <script>
@@ -27,12 +28,10 @@
         var KEYCODE_D = 68; //useful keycode
         var KEYCODE_S = 83; //useful keycode
 
-        var manifest; // used to register sounds for preloading
-        var preload;
-
         var canvas; //Main canvas
         var stage; //Main display stage
 
+        var audio; //audio handler
         var background; //background class
         var player; //player class
 
@@ -74,22 +73,12 @@
             stage.addChild(messageField);
             stage.update(); //update the stage to show text
 
-            // begin loading content (only sounds to load)
-            var assetsPath = "sounds/";
-            manifest = [
-                { id: "begin", src: "spawn.ogg" },
-                { id: "break", src: "break.ogg", data: 6 },
-                { id: "death", src: "death.ogg" },
-                { id: "laser", src: "shot.ogg", data: 6 },
-                { id: "music", src: "music.ogg" }
-            ];
 
-            createjs.Sound.alternateExtensions = ["mp3"];
-            preload = new createjs.LoadQueue(true, assetsPath);
-            preload.installPlugin(createjs.Sound);
-            preload.addEventListener("complete", doneLoading); // add an event listener for when load is completed
-            preload.addEventListener("progress", updateLoading);
-            preload.loadManifest(manifest);
+            //create audio handler
+            audio = new Audio();
+
+            //finish loading
+            doneLoading();
         }
 
         function stop() {
@@ -115,7 +104,7 @@
             messageField.text = "Welcome: Click to play";
 
             // start the music
-            //createjs.Sound.play("music", { interrupt: createjs.Sound.INTERRUPT_NONE, loop: -1, volume: 0.4, pan: 0 });
+            createjs.Sound.play("music", { interrupt: createjs.Sound.INTERRUPT_NONE, loop: -1, volume: 0.4, pan: 0 });
             watchRestart();
         }
 
