update font variables

--- a/Game.html
+++ b/Game.html
@@ -153,7 +153,7 @@
             //create the chest manager
             chestManager = new ChestManager();
             chestManager.addChest(640,100,1,1,"topClosed");
-            chestManager.getLastChest(0).setText('easy');
+            chestManager.getLastChest(0).setText('easy 123');
             chestManager.addChest(1100,360,1,1,"sideClosed");
             chestManager.getLastChest(0).setText('peazy');
             chestManager.addChest(640,620,1,1,"bottomClosed");
