revise game class

--- a/Game.html
+++ b/Game.html
@@ -20,195 +20,6 @@
     <script type="text/javascript" src="ChestManager.js"></script>
     <script type="text/javascript" src="CustomCharacter.js"></script>
     <script type="text/javascript" src="CustomText.js"></script>
-    <script>
-        var KEYCODE_ENTER = 13; //useful keycode
-        var KEYCODE_SPACE = 32; //useful keycode
-        var KEYCODE_UP = 38; //useful keycode
-        var KEYCODE_LEFT = 37; //useful keycode
-        var KEYCODE_RIGHT = 39; //useful keycode
-        var KEYCODE_DOWN = 40; 
-        var KEYCODE_W = 87; //useful keycode
-        var KEYCODE_A = 65; //useful keycode
-        var KEYCODE_D = 68; //useful keycode
-        var KEYCODE_S = 83; //useful keycode
-
-        var canvas; //Main canvas
-        var stage; //Main display stage
-
-        var audio; //audio handler
-        var background; //background class
-        var player; //player class
-
-        var chestManager;
-        //var chest; //chest class
-
-        //var customText;
-        var messageField; //Message display field
-        var scoreField; //score Field
-
-        var loadingInterval = 0;
-
-        //register key functions
-        document.onkeydown = handleKeyDown;
-        document.onkeyup = handleKeyUp;
-
-        function init() {
-            if (!createjs.Sound.initializeDefaultPlugins()) {
-                document.getElementById("error").style.display = "block";
-                document.getElementById("content").style.display = "none";
-                return;
-            }
-
-            /*if (createjs.BrowserDetect.isIOS || createjs.BrowserDetect.isAndroid || createjs.BrowserDetect.isBlackberry) {
-                document.getElementById("mobile").style.display = "block";
-                document.getElementById("content").style.display = "none";
-                return;
-            }*/
-
-            canvas = document.getElementById("gameCanvas");
-            canvas.getContext("2d").imageSmoothingEnabled = true;
-            canvas.getContext("2d").mozImageSmoothingEnabled = false;
-            canvas.getContext("2d").oImageSmoothingEnabled = false;
-            canvas.getContext("2d").webkitImageSmoothingEnabled = false;
-            canvas.getContext("2d").msImageSmoothingEnabled = false;
-            stage = new createjs.Stage(canvas);
-            stage.enableMouseOver(30);
-            messageField = new createjs.Text("Loading", "bold 24px Arial", "#666");
-            messageField.maxWidth = 1000;
-            messageField.textAlign = "center";
-            messageField.textBaseline = "middle";
-            messageField.x = canvas.width / 2;
-            messageField.y = canvas.height / 2;
-            stage.addChild(messageField);
-            stage.update(); //update the stage to show text
-
-
-            //create audio handler
-            audio = new Audio();
-
-            //finish loading
-            doneLoading();
-        }
-
-        function stop() {
-            if (preload != null) {
-                preload.close();
-            }
-            createjs.Sound.stop();
-        }
-
-        function updateLoading() {
-            messageField.text = "Loading " + (preload.progress * 100 | 0) + "%";
-            stage.update();
-        }
-
-        function doneLoading(event) {
-            clearInterval(loadingInterval);
-            scoreField = new createjs.Text("0", "bold 18px Arial", "#666");
-            scoreField.textAlign = "right";
-            scoreField.x = canvas.width - 20;
-            scoreField.y = 20;
-            scoreField.maxWidth = 1000;
-
-            messageField.text = "Welcome: Click to play";
-
-            // start the music
-            //createjs.Sound.play("music", { interrupt: createjs.Sound.INTERRUPT_NONE, loop: -1, volume: 0.4, pan: 0 });
-            watchRestart();
-        }
-
-        function watchRestart() {
-            //watch for clicks
-            stage.addChild(messageField);
-            stage.update(); //update the stage to show text
-            canvas.onclick = handleClick;
-        }
-
-        function handleClick() {
-            //prevent extra clicks and hide text
-            canvas.onclick = null;
-            stage.removeChild(messageField);
-
-            // indicate the player is now on screen
-            createjs.Sound.play("begin");
-
-            restart();
-        }
-
-        //reset all game logic
-        function restart() {
-            //hide anything on stage and show the score
-            stage.removeAllChildren();
-            scoreField.text = (0).toString();
-            stage.addChild(scoreField);
-
-            //create the background
-            background = new Background();
-            background.x = canvas.width / 2;
-            background.y = canvas.height / 2;
-
-            //create the player
-            player = new Player(canvas.width / 2, canvas.height / 2);
-
-            //create the chest manager
-            chestManager = new ChestManager();
-            chestManager.addChest(640,100,1,1,"topClosed");
-            chestManager.getLastChest(0).setText('a');
-            chestManager.addChest(1100,360,1,1,"sideClosed");
-            chestManager.getLastChest(0).setText('peazy');
-            chestManager.addChest(640,620,1,1,"bottomClosed");
-            chestManager.getLastChest(0).setText('lemon');
-            chestManager.addChest(180,360,-1,1,"sideClosed");
-            chestManager.getLastChest(0).setText('squeezy');
-
-            //ensure stage is blank and add the player
-            stage.clear();
-            stage.addChild(background);
-            stage.addChild(player);
-            stage.addChild(chestManager);
-
-            //start game timer
-            if (!createjs.Ticker.hasEventListener("tick")) {
-                createjs.Ticker.addEventListener("tick", tick);
-                createjs.Ticker.setFPS(60);
-            }
-        }
-
-        function tick(event) {
-            //call sub ticks
-            background.tick(event);
-            player.tick(event);
-            //chest.tick(event);
-            chestManager.tick(event);
-            stage.update(event);
-        }
-
-        //allow for WASD and arrow control scheme
-        function handleKeyDown(e) {
-            if (!e) { var e = window.event; } //cross browser issues exist
-            switch (e.keyCode) {
-                case KEYCODE_A: case KEYCODE_LEFT: player.moveLeft(1); break;
-                case KEYCODE_D: case KEYCODE_RIGHT: player.moveRight(1); break;
-                case KEYCODE_W: case KEYCODE_UP: player.moveUp(1); break;
-                case KEYCODE_S: case KEYCODE_DOWN: player.moveDown(1); break;
-                case KEYCODE_ENTER: if (canvas.onclick == handleClick) { handleClick(); } break;
-            }
-        }
-
-        function handleKeyUp(e) {
-            if (!e) { var e = window.event; } //cross browser issues exist
-            switch (e.keyCode) {
-                case KEYCODE_A: case KEYCODE_LEFT: player.moveLeft(0); break;
-                case KEYCODE_D: case KEYCODE_RIGHT: player.moveRight(0); break;
-                case KEYCODE_W: case KEYCODE_UP: player.moveUp(0); break;
-                case KEYCODE_S: case KEYCODE_DOWN: player.moveDown(0); break;
-            }
-        }
-
-        function addScore(value) {
-            //trust the field will have a number and add the score
-            scoreField.text = (Number(scoreField.text) + Number(value)).toString();
-        }
-    </script>
+    <script type="text/javascript" src="Game.js"></script>
 </body>
 </html>
