--- a/Game.html
+++ b/Game.html
@@ -13,7 +13,7 @@
     <script src="easeljs-NEXT.combined.js"></script>
 
     <!-- Game script below -->
-    <script type="text/javascript" src="Audio.js"></script>
+    <!--<script type="text/javascript" src="Audio.js"></script>-->
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Player.js"></script>
     <script type="text/javascript" src="Chest.js"></script>
