--- a/Game.html
+++ b/Game.html
@@ -12,8 +12,7 @@
     <script src="soundjs-NEXT.min.js"></script>
     <script src="easeljs-NEXT.combined.js"></script>
 
-    <!-- Game script below -->
-    <!--<script type="text/javascript" src="Audio.js"></script>-->
+    <!-- Game classes below -->
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Player.js"></script>
     <script type="text/javascript" src="Chest.js"></script>
