polish upgrade screen

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>NeuroCoach: Treasure Checker</title>
 </head>
 
-<body onload="init();" style="margin:0 auto; text-align: center; ">
+<body onload="init();" style="margin:0 auto; text-align: center; width: 100%">
     <div id="content"><canvas id="gameCanvas" width="1280" height="720" style="background-color: #f1f1f1; max-width: 100%;"></canvas></div>
     <script src="preloadjs-NEXT.min.js"></script>
     <script src="soundjs-NEXT.min.js"></script>
     <script src="easeljs-NEXT.combined.js"></script>
 
     <!-- Game classes below -->
+    <script type="text/javascript" src="AssetManager.js"></script>
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Player.js"></script>
     <script type="text/javascript" src="Chest.js"></script>
