--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="preloadjs-NEXT.min.js"></script>
     <script src="soundjs-NEXT.min.js"></script>
     <script src="easeljs-NEXT.combined.js"></script>
+    <script src="ndgmr.Collision.js"></script>
 
     <!-- Game classes below -->
     <script type="text/javascript" src="AssetManager.js"></script>
