--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="init();" style="margin:0 auto; text-align: center; width: 100%">
-    <div id="content"><canvas id="gameCanvas" width="1280" height="720" style="background-color: #f1f1f1; max-width: 100%;"></canvas></div>
+    <div id="content"><canvas id="gameCanvas" width="1280" height="720" style="background-color: #f1f1f1; width: 100%;"></canvas></div>
     <script src="preloadjs-NEXT.min.js"></script>
     <script src="soundjs-NEXT.min.js"></script>
     <script src="easeljs-NEXT.combined.js"></script>
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="ChestManager.js"></script>
     <script type="text/javascript" src="CustomCharacter.js"></script>
     <script type="text/javascript" src="CustomText.js"></script>
+    <script type="text/javascript" src="Selector.js"></script>
     <script type="text/javascript" src="Game.js"></script>
 </body>
 </html>
