update level manager system

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="easeljs-NEXT.combined.js"></script>
     <script src="ndgmr.Collision.js"></script>
 
-    <!-- Game classes below -->
+    <!-- Game 'Classes'  -->
     <script type="text/javascript" src="AssetManager.js"></script>
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Player.js"></script>
@@ -27,6 +27,8 @@
     <script type="text/javascript" src="CustomCharacter.js"></script>
     <script type="text/javascript" src="CustomText.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
+    <script type="text/javascript" src="LevelManager.js"></script>
+    <!-- Game Parent Script -->
     <script type="text/javascript" src="Game.js"></script>
 </body>
 </html>
