--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>NeuroCoach: Treasure Checker</title>
 </head>
 
-<body onload="init();" style="margin:0 auto; text-align: center; width: 100%">
+<body onload="window.Game;" style="margin:0 auto; text-align: center; width: 100%">
     <div id="content"><canvas id="gameCanvas" width="1280" height="720" style="background-color: #f1f1f1; width: 100%;"></canvas></div>
     <script src="preloadjs-NEXT.min.js"></script>
     <script src="soundjs-NEXT.min.js"></script>
