introduce manifest.json for asset manager

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="CustomCharacter.js"></script>
     <script type="text/javascript" src="CustomText.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
+    <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
     <!-- Game Parent Script -->
     <script type="text/javascript" src="Game.js"></script>
