explode coins out of chest

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script type="text/javascript" src="ChestManager.js"></script>
     <script type="text/javascript" src="CustomCharacter.js"></script>
     <script type="text/javascript" src="CustomText.js"></script>
+    <script type="text/javascript" src="CoinEffect.js"></script>
+    <script type="text/javascript" src="Coin.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
     <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
