update intro screen

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="CoinEffect.js"></script>
     <script type="text/javascript" src="Coin.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
+    <script type="text/javascript" src="IntroScreen.js"></script>
     <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
     <!-- Game Parent Script -->
