--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="preloadjs-NEXT.min.js"></script>
     <script src="soundjs-NEXT.min.js"></script>
     <script src="easeljs-NEXT.combined.js"></script>
+    <script src="tweenjs-NEXT.min.js"></script>
     <script src="ndgmr.Collision.js"></script>
 
     <!-- Game 'Classes'  -->
@@ -30,7 +31,7 @@
     <script type="text/javascript" src="Coin.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
     <script type="text/javascript" src="ScreenIntro.js"></script>
-    <script type="text/javascript" src="ScreenInstructions.js"></script>
+    <!--<script type="text/javascript" src="ScreenInstructions.js"></script>-->
     <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
     <!-- Game Parent Script -->
