--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="Coin.js"></script>
     <script type="text/javascript" src="Selector.js"></script>
     <script type="text/javascript" src="ScreenIntro.js"></script>
-    <!--<script type="text/javascript" src="ScreenInstructions.js"></script>-->
+    <script type="text/javascript" src="ScreenInstructions.js"></script>
     <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
     <!-- Game Parent Script -->
