update word variations

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="Selector.js"></script>
     <script type="text/javascript" src="ScreenIntro.js"></script>
     <script type="text/javascript" src="ScreenInstructions.js"></script>
+    <script type="text/javascript" src="ScreenScore.js"></script>
     <script type="text/javascript" src="Interface.js"></script>
     <script type="text/javascript" src="LevelManager.js"></script>
     <!-- Game Parent Script -->
