--- a/www/index.html
+++ b/www/index.html
@@ -34,11 +34,11 @@
             </div>
         </div>
 
-        <script src="preloadjs-NEXT.min.js"></script>
-        <script src="soundjs-NEXT.min.js"></script>
-        <script src="easeljs-NEXT.combined.js"></script>
-        <script src="tweenjs-NEXT.min.js"></script>
-        <script src="ndgmr.Collision.js"></script>
+        <script src="js/preloadjs-NEXT.min.js"></script>
+        <script src="js/soundjs-NEXT.min.js"></script>
+        <script src="js/easeljs-NEXT.combined.js"></script>
+        <script src="js/tweenjs-NEXT.min.js"></script>
+        <script src="js/ndgmr.Collision.js"></script>
 
         <!-- Game 'Classes'  -->
         <script type="text/javascript" src="js/AssetManager.js"></script>
