--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,13 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
         <title>Hello World</title>
     </head>
-    <body style="margin:0;">
+    <body>
         <div class="app">
             <div id="content">
-                <canvas id="gameCanvas" width="1280" height="720" style="display: block; background-color: #f1f1f1; width: 100%;"></canvas>
+                <canvas id="gameCanvas" width="1280" height="720"></canvas>
             </div>
         </div>
 
