update settings screen

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
         <script type="text/javascript" src="js/ScreenIntro.js"></script>
         <script type="text/javascript" src="js/ScreenInstructions.js"></script>
         <script type="text/javascript" src="js/ScreenScore.js"></script>
+        <script type="text/javascript" src="js/ScreenSettings.js"></script>
         <script type="text/javascript" src="js/Interface.js"></script>
         <script type="text/javascript" src="js/LevelManager.js"></script>
         <!-- Game Parent Script -->
