--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta content='width=device-width, initial-scale=.2, maximum-scale=.2, user-scalable=0' name='viewport' />
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel='shortcut icon' href='res/icon/android/icon-36-ldpi.png' type='image/x-icon' >
         <title>Hello World</title>
     </head>
     <body>
