ajax send score

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
 
+        <script src="js/jquery-2.1.0.js"></script>
         <script src="js/preloadjs-NEXT.min.js"></script>
         <script src="js/soundjs-NEXT.min.js"></script>
         <script src="js/easeljs-NEXT.combined.js"></script>
