user login popup

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta content='width=device-width, initial-scale=.2, maximum-scale=.2, user-scalable=0' name='viewport' />
+        <link rel="stylesheet" type="text/css" href="css/alertify.css">
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
         <link rel='shortcut icon' href='res/icon/android/icon-36-ldpi.png' type='image/x-icon' >
         <title>Hello World</title>
@@ -37,6 +38,7 @@
         </div>
 
         <script src="js/jquery-2.1.0.js"></script>
+        <script src="js/alertify.js"></script>
         <script src="js/preloadjs-NEXT.min.js"></script>
         <script src="js/soundjs-NEXT.min.js"></script>
         <script src="js/easeljs-NEXT.combined.js"></script>
